fix(compile) Restore --enable-preview